# freebsd-zen-browser-port

./: .gitignore  Cargo.toml  MEMORY_ALLOCATION.md  Makefile  Makefile.crates  QUICKSTART.md  README.md  distinfo  main.rs  oldMakefile  pkg-descr  pkg-plist
.cargo/: config.toml
.github/workflows/: ci-tests.yml
files/: PATCHES.md  README.md  byteswap.h  check_patches.sh  endian.h  malloc.h  patch-Cargo.toml  patch-dom_media_webrtc_libwebrtc_overrides_moz.build  patch-libwebrtc-generated  patch-media_libcubeb_src_cubeb__alsa.c  patch-media_libcubeb_src_cubeb_alsa.c  patch-memory_build_Fallback.cpp  patch-memory_build_mozjemalloc.cpp  patch-memory_build_mozmemory__wrap.cpp  patch-memory_mozalloc_mozalloc.cpp  patch-memory_mozalloc_mozalloc.h  patch-third__party_sqlite3_src_sqlite3.c  patch-third_party_libwebrtc_modules_portal_pipewire__utils.h  patch_rust_manifests.sh  test_malloc_wrapper.c  verify_patches.sh
files/deactivated/: patch-dom_media_webrtc_third_party_build_webrtc.mozbuild  patch-memory_mozalloc_mozalloc.cpp  patch-third__party_libwebrtc_modules_desktop__capture_linux_wayland__egl__dmabuf.cc  patch-third_party_libwebrtc_build_config_BUILDCONFIG.gn
files/disabled/: patch-dom_media_webrtc_third_party_build_webrtc.mozbuild  patch-libwebrtc-powerpc64  patch-memory_build_mozjemalloc.cpp  patch-memory_build_mozmemory.h  patch-third__party_libwebrtc_modules_desktop__capture_linux_wayland__egl__dmabuf.cc  patch-third__party_sqlite3_src_sqlite3.c  patch-third_party_libwebrtc_build_config_BUILDCONFIG.gn  patch-third_party_libwebrtc_modules_portal_pipewire__utils.h
files/disabled/rust-manifests-patches/: README-ohttp-bhttp.md  README.md  patch-ohttp-bhttp.patch  patch-workspace-deps.patch  patch_ohttp_bhttp.sh
files/disabled/rust-manifests-patches/test-workspace/: Cargo.toml
files/patch-rust-manifests/: fix_manifests_and_verify.sh  patch-workspace-package-edition.patch
scripts/: patch-vendored.sh  run-full-tests.sh  run-stage.sh
work/: Cargo.toml
work-py311/: .gitignore  .license-catalog.mk  Cargo.toml
work-py311/browser/actors/: EncryptedMediaParent.sys.mjs  WebRTCParent.sys.mjs
work-py311/browser/app/profile/: firefox.js  zen.js
work-py311/browser/base/: jar.mn  moz.build
work-py311/browser/base/content/: aboutDialog.js  aboutDialog.xhtml  browser-addons.js  browser-box.inc.xhtml  browser-commands.js  browser-development-helpers.js  browser-fullScreenAndPointerLock.js  browser-gestureSupport.js  browser-init.js  browser-pageActions.js  browser-places.js  browser-sets.inc  browser-sets.js  browser-siteIdentity.js  browser.js  browser.xhtml  main-popupset.inc.xhtml  navigator-toolbox.inc.xhtml  navigator-toolbox.js  nsContextMenu.sys.mjs
work-py311/browser/branding/release/: branding.nsi  configure.sh
work-py311/browser/branding/twilight/: branding.nsi  configure.sh
work-py311/browser/components/: BrowserGlue.sys.mjs
work-py311/browser/components/customizableui/: CustomizableUI.sys.mjs  (+2 more)
work/ohttp-bf6a983845cc0b540effb3a615e92d914dfcfd0b/bhttp/: Cargo.toml
(+58 files in other folders)
