[package]
name = "bhttp"
description = "Binary HTTP messages (RFC 9292)"
authors = ["Unknown <no-reply@local>"]
homepage = "https://example.invalid"
repository = "https://example.invalid"
version = "0.0.0"
edition = "2021"
rust-version = "0.0.0"
license = "MIT OR Apache-2.0"
keywords = []
categories = []
readme = "README.md"

[features]
default = ["bhttp"]
bhttp = ["read-bhttp", "write-bhttp"]
http = ["read-http", "write-http"]
read-bhttp = []
write-bhttp = []
read-http = ["url"]
write-http = []

[dependencies]
thiserror = "1"
url = {version = "2", optional = true}

[dev-dependencies]
hex = "0.4"
